feat: add api for operator table
